--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body,html{
 }
 
 header{
-	background-image: url("../img/header.png");
 	min-height: 100px;
 
 }
@@ -57,3 +56,7 @@ a:active {
    color:black;
 }
 
+.titreInscription {
+	text-align: center;
+	color: black;
+}
