--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body,html{
 }
 
 header{
+	background-image: url("../img/hello.png");
 	min-height: 100px;
 
 }
@@ -41,6 +42,15 @@ a:hover {
 
 a:active {
     text-decoration: none;
+}
+
+
+.titreAccueil {
+	text-align: center;
+}
+
+.bienvenue {
+	text-align: center;
 }
 
 .tableauUser tr:hover{
